--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "material-icons": "^1.13.12",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2"
   }
 }
