--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,10 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
-      - name: Build
-        run: npm run build
+      - name: Build Typescript
+        run: npm run build:ts
+      - name: Build css Files
+        run: npm run build:scss
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
