--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,7 @@ jobs:
       - name: Archive production artifact
         uses: actions/upload-artifact@main
         with:
-          name: dist
-          path: dist
+          path: '.'
   deploy-github-pages:
     name: Deploy to Github Pages 🚀
     needs: build
@@ -77,7 +76,6 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@main
         with: 
-          name: dist
           path: '.'
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
