--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,8 @@ jobs:
       - name: Archive production artifact
         uses: actions/upload-artifact@main
         with:
-          path: '.'
+          name: dist
+          path: 'dist'
       - name: Upload artifact for pages
         uses: actions/upload-pages-artifact@v2
         with:
@@ -72,7 +73,8 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@main
         with: 
-          path: '.'
+          name: dist
+          path: 'dist'
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with: 
