--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Archive production artifact
         uses: actions/upload-artifact@main
         with:
-          name: dist
-          path: 'dist'
+          name: artifact
+          path: 'artifact'
       - name: Upload artifact for pages
         uses: actions/upload-pages-artifact@v2
         with:
@@ -73,8 +73,8 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@main
         with: 
-          name: dist
-          path: 'dist'
+          name: artifact
+          path: 'artifact'
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with: 
