--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Archive production artifact
         uses: actions/upload-artifact@main
         with:
-          path: './artifact'
+          path: '.'
       - name: Upload artifact for pages
         uses: actions/upload-pages-artifact@v2
         with:
@@ -72,7 +72,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@main
         with: 
-          path: './artifact'
+          path: '/artifact'
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with: 
