--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,6 +70,6 @@ jobs:
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with: 
-          server: ftp.enterflash.com
-          username: testcicd@enterflash.com
+          server: web17.alfahosting-server.de
+          username: h204810_github_deploy
           password: ${{ secrets.ftp_password }}
