--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ['master']
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -17,7 +17,7 @@ permissions:
 
 # Allow one concurrent deployment
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: true
 
 jobs:
@@ -28,6 +28,16 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+
+      # TODO Remove after Deploy  
+      - name: Clear Cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Node
@@ -57,19 +67,19 @@ jobs:
   deploy-prod:
     name: Deploy Prod 🚀
     needs: build-and-deploy-github-pages
-    environment: 'prod'
+    environment: "prod"
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Download artifact
         uses: actions/download-artifact@v4
-        with: 
+        with:
           name: dest
           path: dest
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
-        with: 
+        with:
           server: web17.alfahosting-server.de
           username: h204810_github_deploy
           password: ${{ secrets.ftp_password }}
