--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4 #3
         with:
           node-version: 18
           cache: 'npm'
@@ -45,7 +45,7 @@ jobs:
           name: dest
           path: dest
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4 #3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
