--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "material-icons": "^1.13.12",
     "sass": "^1.69.5",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.10"
   }
 }
